--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -30,5 +30,11 @@
     <input type="submit" value="Update!"/>
 </form>
 
+<br/>
+<form action="/logout" method="GET">
+    <button type="submit">Logout</button>
+</form>
+
+
 </body>
 </html>
