--- a/src/main/resources/templates/admin/show.html
+++ b/src/main/resources/templates/admin/show.html
@@ -34,5 +34,10 @@
     <br/>
     <input type="submit" value="Delete"/>
 </form>
+
+<br/>
+<form action="/logout" method="GET">
+    <button type="submit">Logout</button>
+</form>
 </body>
 </html>
