--- a/src/main/resources/templates/user/SingleUser.html
+++ b/src/main/resources/templates/user/SingleUser.html
@@ -26,7 +26,10 @@
     </tbody>
 </table>
 
-
+<br/>
+<form action="/logout" method="GET">
+    <button type="submit">Logout</button>
 </form>
+
 </body>
 </html>
