--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -31,7 +31,13 @@
 
 <div>
     </br>
-    <a href="/admin/new">Create new user</a>
+    <form action="/admin/new"method="GET">
+        <button type="submit">Create new user</button>
+    </form>
+    <br/>
+    <form action="/logout" method="GET">
+        <button type="submit">Logout</button>
+    </form>
 </div>
 </body>
 </html>
