--- a/src/main/resources/templates/admin/new.html
+++ b/src/main/resources/templates/admin/new.html
@@ -30,5 +30,10 @@
     <input type="submit" value="Create!"/>
 </form>
 
+<br/>
+<form action="/logout" method="GET">
+    <button type="submit">Logout</button>
+</form>
+
 </body>
 </html>
